# web-automator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: adding-a-provider.md  adding-a-site-handler.md  architecture.md  tools.md
skills/forms/: form_fill.md
skills/navigation/: github.md
skills/search/: google_search.md
skills/testing/: playwright_test.md
src/web_automator/: __init__.py  __main__.py  agent.py  browser.py  cli.py  server.py  skills.py  test_writer.py  tools.py
src/web_automator/providers/: __init__.py  anthropic.py  base.py  openai.py
src/web_automator/sites/: __init__.py  base.py  saucedemo.py  udemy.py
tests/: conftest.py  test_sauce.py
